# speed

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/speed/: algorithm.hpp  argparse.hpp  containers.hpp  exception.hpp  filesystem.hpp  iostream.hpp  lowlevel.hpp  math.hpp  scalars.hpp  speed.hpp  speed_alias.hpp  speed_version.hpp  stringutils.hpp  system.hpp  time.hpp  type_casting.hpp  type_traits.hpp
src/speed/algorithm/: algorithm.hpp
src/speed/argparse/: arg_error_flags.hpp  arg_flags.hpp  arg_parser_error_flags.hpp  arg_parser_flags.hpp  arg_value_error_flags.hpp  arg_value_types.hpp  argparse_exception.hpp  argparse_forward_declarations.hpp  basic_arg_key.hpp  basic_arg_parser.hpp  basic_arg_value.hpp  basic_base_arg.hpp  basic_help_arg.hpp  basic_help_text.hpp  basic_key_arg.hpp  basic_key_value_arg.hpp  basic_keyless_arg.hpp  basic_relational_constraint.hpp  basic_value_arg.hpp  basic_version_arg.hpp  i_help_text.hpp  relational_constraint_types.hpp
src/speed/containers/: circular_doubly_linked_list.hpp  containers_exception.hpp  doubly_linked_node.hpp  flags.hpp  i_const_iterator.hpp  i_const_mutable_iterator.hpp  i_iterator.hpp  i_mutable_iterator.hpp  static_cache.hpp
src/speed/exception/: exception_base.hpp  message_exception_base.hpp
src/speed/filesystem/: directory_iteration.cpp  directory_iteration.hpp
src/speed/iostream/: basic_ios_redirect.hpp  basic_ostream.hpp  indentation.cpp  indentation.hpp  stdio.cpp  stdio.hpp
src/speed/lowlevel/: arithmetic_operations.hpp  enum_bitwise_operators.hpp  logical_operations.hpp  lowlevel_exception.hpp
src/speed/math/: math.hpp
src/speed/scalars/: scalar.hpp  scalars.hpp
src/speed/stringutils/: c_string_utils.hpp  string_utils.hpp
src/speed/system/: data_types.hpp  error_code.hpp  filesystem.hpp  process.hpp  system_exception.hpp  system_macros.hpp  time.cpp  types.hpp
src/speed/system/api/glibc/: filesystem.cpp  filesystem.hpp  process.hpp  terminal.cpp  time.hpp
src/speed/system/filesystem/: access_modes.hpp  file_types.hpp  filesystem.hpp
src/speed/system/glibc/: filesystem.cpp  filesystem.hpp  process.cpp  terminal.hpp  time.cpp
src/speed/system/terminal/: terminal.hpp  text_attribute.hpp
src/speed/system/time/: time.hpp
src/speed/time/: child_cpu_chrono.cpp  child_cpu_chrono.hpp  chrono_states.hpp  cpu_chrono.cpp  cpu_chrono.hpp  i_chrono.hpp  monotonic_chrono.cpp  monotonic_chrono.hpp  monotonic_timer.cpp  monotonic_timer.hpp
src/speed/type_casting/: basic_string_to_type.hpp  c_string_to_basic_string.hpp  c_string_to_floating_point.hpp  c_string_to_integral_signed.hpp  c_string_to_integral_unsigned.hpp  c_string_to_path.hpp  type_cast.hpp  type_casting_exception.hpp
src/speed/type_traits/: type_traits.hpp
test/: CMakeLists.txt
test/speed_test/: main.cpp
test/speed_test/algorithm_test/: algorithm_test.cpp
test/speed_test/argparse_test/: arg_parser_test.cpp
test/speed_test/containers_test/: circular_doubly_linked_lists_test.cpp  flags_test.cpp  static_cache_test.cpp
test/speed_test/iostream_test/: indentation_test.cpp
test/speed_test/lowlevel_test/: arithmetic_operations_test.cpp  enum_bitwise_operators_test.cpp  logical_operations_test.cpp
test/speed_test/scalars_test/: scalar_test.cpp  scalars_test.cpp
test/speed_test/stringutils_test/: c_string_utils_test.cpp  string_utils_test.cpp
test/speed_test/system_test/: filesystem_test.cpp  process_test.cpp  terminal_test.cpp  time_test.cpp
test/speed_test/time_test/: cpu_chono_test.cpp  monotonic_chrono_test.cpp
test/speed_test/type_casting_test/: try_type_cast_test.cpp  type_cast_test.cpp
test/speed_test/type_traits_test/: type_traits_test.cpp
